
<resources>
    <!--    Common Terms-->
    <string name="timeH">Hour</string>
    <string name="timeM">Minute</string>
    <string name="timeMor">Morning</string>
    <string name="timeAft">Afternoon</string>
    <string name="timeEve">Evening</string>
    <string name="Comment">Comment:</string>
    <string name="AddButton">Add</string>
    <string name="emailLabel">Email</string>
    <string name="pwLabel">Password</string>
    <string name="app_name">medCheck</string>
    <string name="registerLabel">Register</string>
    <string name="usernameLabel">Username</string>
    <string name="confirmButton">Confirm</string>
    <string name="deleteButton">Delete</string>
    <string name="phoneLabel">Phone Number</string>
    <string name="RePwLabel">Re-enter password</string>

    <!--    navigation-->
    <string name="splashDescript">Your personal healthcare scheduler!</string>
    <string name="splashCredit">- Powered by NTU FriedChicken Team -</string>
    <string name="nav_calendar">Calendar</string>
    <string name="nav_schedule">Schedule</string>
    <string name="nav_home">Home</string>
    <string name="nav_medicine">Medicine</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!--    headers-->
    <string name="headerSearchClinic">Search for Screening Centres</string>
    <string name="headerCheckupDetail">Checkup Detail</string>
    <string name="headerNewCheckup">New Checkup Schedule</string>
    <string name="headerNewMedication">New Medication Reminder</string>
    <string name="headerMedicationDetail">Medication Detail</string>

    <!--    entries = checkup/medication-->
    <string name="eventName">Event</string>
    <string name="clinicName">Clinic:</string>
    <string name="eventDate">Date:</string>
    <string name="eventTime">Time:</string>
    <string name="addCheckupButton">Add New Checkup</string>
    <string name="addMedButton">Add New Medication</string>

    <!--    ScreeningCenterMgr.java-->
    <string name="postalLabel">Postal Code: </string>
    <string name="streetLabel">Street Name: </string>
    <string name="clinicLabel">Clinic: </string>
    <string name="webLabel">Website: </string>

    <!--    fragment_map.xml-->
    <string name="searchButton">Search</string>
        <!--clinicTypeSpinner-->
    <string-array name="clinic_choices">
        <item><string name="clinicTypeDefault">Choose clinic type</string></item>
        <item><string name="clinicTypeBreast">Breast Screening Centre</string></item>
        <item><string name="clinicTypeCervical">Cervical Screening Centre</string></item>
        <item><string name="clinicTypeCHAS">CHAS Clinics</string></item>
    </string-array>
    <string name="clinicBreast">Breast Screening Centre</string>
    <string name="clinicCervical">Cervical Screening Centre</string>
    <string name="clinicCHAS">CHAS Clinics</string>
    <string name="confirmClinicButton">Confirm Clinic</string>

    <!--    activity_add_checkup.xml-->
    <string name="newCheckupType">Type of checkup:</string>

    <!--    activity_add_medication.xml-->
    <string name="newMedName">Medication Name:</string>
    <string name="newMedDosageText">Dosage:</string>
    <string name="newMedTimeText">Reminder Time:</string>
    <string name="newMedRepeat1">Repeat: Once every</string>
    <string name="newMedRepeat2">day(s)</string>
    <string name="newMedAddimg">Add Image</string>
        <!--unitListSpinner-->
    <string-array name="dosageUnit">
        <item><string name="unitListDefault">unit</string></item>
        <item><string name="unitListTab">tablet</string></item>
        <item><string name="unitListDrop">drop</string></item>
        <item><string name="unitListMl">ml</string></item>
    </string-array>

    <!--    activity_add_medication.xml-->
    <string name="pwResetButton">Reset password</string>

    <!--    activity_login.xml-->
    <string name="loginButton">Log In</string>
    <string name="forgotPwButton">Forgot Password?</string>

    <!--    activity_register.xml-->
    <string name="confirmPwButton">Confirm Password</string>

    <!--    fragment_user_home.xml-->
    <string name="welcomeBack">Welcome back, </string>
    <string name="userProfile" >User Profile</string>
    <string name="genderLabel">Gender:</string>
    <string name="male_label" >Male</string>
    <string name="female_label">Female</string>
    <string name="birthdayLabel">Birthday:</string>
    <string name="editProfileButton">Edit profile</string>
    <string name="logout" >Logout</string>
    <string name="time_label">Time</string>
    <string name="addMedicationToReminder">Add To Reminder</string>
    <string name="addTime">Add Time</string>
    <string name="deleteTime">Delete Time</string>
    <string name="atLeastOneTime">Cannot delete, need at least one time</string>
    <string name="confirm">Confirm Change</string>

</resources>