<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleCheckupRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:text="@string/eventName"
            android:textColor="#000"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dateCheckupRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:text="@string/eventDate"
            android:textColor="#a9a9a9"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/timeCheckupRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:text="@string/eventTime"
            android:textColor="#a9a9a9"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/locationCheckupRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:text="@string/clinicName"
            android:textColor="#a9a9a9"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/commentCheckupRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:text="@string/Comment"
            android:textColor="#a9a9a9"
            android:textSize="12sp" />

    </LinearLayout>

</LinearLayout>