<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleMedicationRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:text="@string/eventName"
            android:textColor="#000"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/timeMedicationRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:text="@string/eventTime"
            android:textColor="#a9a9a9"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/dosageMedicationRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:text="@string/newMedDosageText"
            android:textColor="#a9a9a9"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/commentMedicationRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:text="@string/Comment"
            android:textColor="#a9a9a9"
            android:textSize="12sp" />

    </LinearLayout>

</LinearLayout>