<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/userHome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.UserHomeFragment">

    <TextView
        android:id="@+id/welcomeBackMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcomeBack"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <TextView
        android:id="@+id/welcomeMessageUserName"
        android:layout_width="181dp"
        android:layout_height="32dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/welcomeBackMessage"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <TextView
        android:id="@+id/userProfileLabel"
        android:layout_width="86dp"
        android:layout_height="25dp"
        android:layout_marginTop="16dp"
        android:text="@string/userProfile"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeBackMessage" />

    <TextView
        android:id="@+id/userProfileUserName"
        android:layout_width="79dp"
        android:layout_height="21dp"
        android:layout_marginTop="20dp"
        android:text="@string/usernameLabel"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userProfileLabel" />

    <EditText
        android:id="@+id/userProfileUsernameInput"
        android:layout_width="237dp"
        android:layout_height="37dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/userProfileUserName"
        app:layout_constraintTop_toBottomOf="@+id/userProfileLabel" />

    <TextView
        android:id="@+id/userProfileEmail"
        android:layout_width="79dp"
        android:layout_height="21dp"
        android:layout_marginTop="24dp"
        android:text="@string/emailLabel"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userProfileUserName" />

    <EditText
        android:id="@+id/userProfileEmailInput"
        android:layout_width="239dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/userProfileUserName"
        app:layout_constraintTop_toBottomOf="@+id/userProfileUsernameInput" />

    <TextView
        android:id="@+id/birthday_text"
        android:layout_width="79dp"
        android:layout_height="21dp"
        android:layout_marginTop="64dp"
        android:text="@string/birthdayLabel"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userProfileEmail" />

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="243dp"
        android:layout_height="103dp"
        android:layout_marginTop="204dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        app:layout_constraintBottom_toTopOf="@+id/timePickerAddCheckup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.636"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/userProfileGender"
        android:layout_width="79dp"
        android:layout_height="21dp"
        android:layout_marginTop="64dp"
        android:text="@string/genderLabel"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birthday_text" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="222dp"
        android:layout_height="67dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.566"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datePicker"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/maleRadioButton"
            android:layout_width="220dp"
            android:layout_height="27dp"
            android:text="@string/male_label"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/femaleRadioButton"
            android:layout_width="220dp"
            android:layout_height="29dp"
            android:text="@string/female_label"
            android:textSize="12sp" />
    </RadioGroup>

    <Button
        android:id="@+id/editProfileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/editProfileButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/confirmButton"
        android:layout_width="132dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:text="@string/confirmButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.112"
        app:layout_constraintTop_toBottomOf="@+id/editProfileButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
